--- a/BffDemo.Bff1/appsettings.Development.json
+++ b/BffDemo.Bff1/appsettings.Development.json
@@ -10,6 +10,7 @@
   "BFF": {
     "Authority": "https://localhost:5000",
     "ClientId": "bff1",
+    "ClientSecret": "511536EF-F270-4058-80CA-1C89C192F69A",
 
     "Scopes": ["openid", "api1", "profile" ],
     
