--- a/BffDemo.Bff2/appsettings.json
+++ b/BffDemo.Bff2/appsettings.json
@@ -12,7 +12,7 @@
     "ClientId": "bff2",
     "ClientSecret": "49C1A7E1-0C79-4A89-A3D6-A37998FB86B0",
 
-    "Scopes": ["openid", "api1", "api2", "profile" ],
+    "Scopes": ["openid", "api2", "profile" ],
 
     "Apis": [
       {
