--- a/BffDemo.Bff2/Properties/launchSettings.json
+++ b/BffDemo.Bff2/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5002",
+      "applicationUrl": "https://bff2.localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
