--- a/BffDemo.NoBffApplication/BffDemo.NoBffApplication.csproj
+++ b/BffDemo.NoBffApplication/BffDemo.NoBffApplication.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="BffDemo.NoBffClient\" />
+    </ItemGroup>
+
 </Project>
