--- a/BffDemo.Bff2/Properties/launchSettings.json
+++ b/BffDemo.Bff2/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
