configurable host names

--- a/BffDemo.Bff1/Properties/launchSettings.json
+++ b/BffDemo.Bff1/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "profiles": {
-    "https": {
+    "default": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:5001",
+      "applicationUrl": "https://bff-server-1.test:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
