--- a/BffDemo.Bff1/appsettings.json
+++ b/BffDemo.Bff1/appsettings.json
@@ -11,12 +11,13 @@
     "Authority": "https://localhost:5000",
     "ClientId": "bff1",
     "ClientSecret": "511536EF-F270-4058-80CA-1C89C192F69A",
+    "ClientUrl": "http://bff-client-1.test:4201",
 
     "Scopes": ["openid", "api1", "profile" ],
 
     "Apis": [
       {
-        "LocalPath": "/api1",
+        "LocalPath": "/api",
         "RemoteUrl": "https://localhost:6000",
         "RequiredToken": "User"
       }
