--- a/BffDemo.Bff2/appsettings.json
+++ b/BffDemo.Bff2/appsettings.json
@@ -11,12 +11,12 @@
     "Authority": "https://localhost:5000",
     "ClientId": "bff2",
     "ClientSecret": "49C1A7E1-0C79-4A89-A3D6-A37998FB86B0",
-
+    "ClientUrl": "http://bff-client-2.test:4202",
     "Scopes": ["openid", "api2", "profile" ],
 
     "Apis": [
       {
-        "LocalPath": "/api2",
+        "LocalPath": "/api",
         "RemoteUrl": "https://localhost:6000",
         "RequiredToken": "User"
       }
