--- a/BffDemo.Bff1/BffDemo.Client1/package.json
+++ b/BffDemo.Bff1/BffDemo.Client1/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host=bff-client-1.test --port=4201",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
