--- a/BffDemo.NoBffApplication/BffDemo.NoBffApplication.csproj
+++ b/BffDemo.NoBffApplication/BffDemo.NoBffApplication.csproj
@@ -10,4 +10,9 @@
       <Folder Include="BffDemo.NoBffClient\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.3.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.13" />
+    </ItemGroup>
+
 </Project>
