--- a/BffDemo.NoBffApplication/Properties/launchSettings.json
+++ b/BffDemo.NoBffApplication/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "https": {
+    "default": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
