silent login and global logout fixed

--- a/BffDemo.NoBffApplication/BffDemo.NoBffClient/angular.json
+++ b/BffDemo.NoBffApplication/BffDemo.NoBffClient/angular.json
@@ -24,7 +24,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/public/silent-refresh.html"
             ],
             "styles": [
               "src/styles.css"
