try different IS urls

--- a/BffDemo.IdentityServer/Properties/launchSettings.json
+++ b/BffDemo.IdentityServer/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "SelfHost": {
+    "default": {
       "commandName": "Project",
       "launchBrowser": false,
       "environmentVariables": {
